<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    tools:context=".RegActivity" >

    <com.quanle.healthmanager.widget.NavigationBar
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/navbar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
    </com.quanle.healthmanager.widget.NavigationBar>

    <TextView
        android:id="@+id/quickLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/navbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_quicklogin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#666" />

    <LinearLayout
        android:id="@+id/quickLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quickLoginTextView"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weixin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sinaweibo" />
    </LinearLayout>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quickLoginLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_reg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#666" />

    <LinearLayout
        android:id="@+id/lyLoginMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginTextView"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etUsrID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:hint="@string/login_hint_usrid"
            android:maxLength="12"
            android:padding="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="#fff"
            android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_-:"
            android:hint="@string/login_hint_usrpass"
            android:inputType="textPassword"
            android:maxLength="18"
            android:padding="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="#fff"
            android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_-:"
            android:hint="@string/reg_hint_usrpass2"
            android:inputType="textPassword"
            android:maxLength="18"
            android:padding="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lyLoginMenu"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/reg_btn_reg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

</RelativeLayout>