<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.quanle.healthmanager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    android:orientation="vertical"
    tools:context=".SystemActivity" >

    <com.quanle.healthmanager.widget.NavigationBar
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height" >
    </com.quanle.healthmanager.widget.NavigationBar>

    <com.quanle.healthmanager.widget.BorderLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:padding="10dp"
        app:border_bottom_size="0.5dp"
        app:border_color="@color/borderColor"
        app:border_top_size="0.5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/indexTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourmedit_title"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/fourmedit_hint_title"
                    android:maxLength="20"
                    android:textSize="15dp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <com.quanle.healthmanager.widget.BorderLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                app:border_bottom_size="0dp"
                app:border_color="@color/borderColor"
                app:border_left_size="0dp"
                app:border_right_size="0dp"
                app:border_top_size="0.5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourmedit_intro"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/introEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/fourmedit_hint_intro"
                    android:lines="2"
                    android:maxLength="50"
                    android:maxLines="2"
                    android:textSize="15dp" />
            </com.quanle.healthmanager.widget.BorderLinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/iconLayout"
            android:layout_width="70dp"
            android:layout_height="70dp" >

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/face" />

            <ImageView
                android:id="@+id/camarImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:src="@drawable/camar" />
        </FrameLayout>
    </com.quanle.healthmanager.widget.BorderLinearLayout>

</LinearLayout>